tests/machine/x/cobol/tail_recursion.error
cobc: exit status 1
/workspace/mochi/tests/machine/x/cobol/tail_recursion.cob:10: error: syntax error, unexpected USING
/workspace/mochi/tests/machine/x/cobol/tail_recursion.cob:11: error: 'FN_SUM-REC_RES' is not defined
/workspace/mochi/tests/machine/x/cobol/tail_recursion.cob: in paragraph 'FN_SUM-REC':
/workspace/mochi/tests/machine/x/cobol/tail_recursion.cob:15: error: syntax error, unexpected PROCEDURE
/workspace/mochi/tests/machine/x/cobol/tail_recursion.cob:16: error: 'N' is not defined
/workspace/mochi/tests/machine/x/cobol/tail_recursion.cob:17: error: 'ACC' is not defined
/workspace/mochi/tests/machine/x/cobol/tail_recursion.cob:19: error: syntax error, unexpected END-IF
/workspace/mochi/tests/machine/x/cobol/tail_recursion.cob:22: error: syntax error, unexpected USING

