tests/machine/x/cobol/tail_recursion.cob
*> Generated by Mochi compiler v0.10.27 on 2025-07-17T07:47:05Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. TAIL-RECURSION.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 FN-SUM-REC-RES PIC 9 VALUE 0.
       01 TMP PIC 9(9) VALUE 0.
       01 TMP-STR PIC Z(18).
       PROCEDURE DIVISION.
       PERFORM FN_SUM-REC USING 10 0
       DISPLAY FN-SUM-REC-RES
       STOP RUN.
       
       FN_SUM-REC.
           PROCEDURE DIVISION USING N ACC.
               IF N = 0
                   COMPUTE FN-SUM-REC-RES = ACC
                   EXIT.
               END-IF
               COMPUTE TMP = N - 1
               COMPUTE TMP = ACC + N
               PERFORM FN_SUM-REC USING TMP TMP
               COMPUTE FN-SUM-REC-RES = FN-SUM-REC-RES
               EXIT.
